# Rendering

./: CMakeLists.txt  README.md  model.txt  output.ppm
include/: Color.h  Light.h  Model.h  PPMImage.h  Parallelogram.h  Point.h  Ray.h  Rendering.h  Sphere.h  Triangle.h  Vector.h
src/: CMakeLists.txt  Color.cpp  Light.cpp  Model.cpp  PPMImage.cpp  Parallelogram.cpp  Point.cpp  Ray.cpp  Rendering.cpp  Sphere.cpp  Triangle.cpp  Vector.cpp  main.cpp
